--- a/c0744413_week8/index.html
+++ b/c0744413_week8/index.html
@@ -4,9 +4,70 @@
     <meta charset="utf-8" />
     <title>c0744413_week8</title>
     <link href="css/default.css" rel="stylesheet" />
+
 </head>
 <body>
     <div>Content goes here!</div>
-    <script src="js/main.js"></script>
+   
+    <script>
+
+        // JASPREET KAUR (c0744413)
+        //MANDEEP KAUR   (C0742602)
+
+        var j=0;
+        for (var i = 1109; i >= 119; i -= 11) {
+            j = j + i;
+           
+        }
+        document.write(j);
+
+        //add number
+        function addnum(j) {
+            return {
+                for(var k = 1109; k>= 119; k-= 11){
+                console.log('draw');
+            }
+            }
+        };
+
+
+
+  
+        
+               /* const circle = {
+                    radius: 1,
+                    location: {
+                        x: 1,
+                        y: 1
+
+                    },
+                    draw: function () {
+                        console.log('draw');
+                    }
+                };
+                circle.draw();*/
+
+                //Factory
+                /*function createCircle(radius) {
+                    return {
+                        radius,
+                        draw: function () {
+                            console.log('draw');
+                        }
+                    };
+                }
+                    const circle = createCircle(1);
+                    circle.draw();
+
+                //constructor Function
+                function Circle(radius) {
+                    console.log('this', this);
+                    this.radius = radius;
+                    this.draw = function () {
+                        console.log('draw');
+                    }
+                }
+                const another = new Circle(1);*/
+    </script>
 </body>
 </html>
